syntax = "proto3";

import "common/api/src/common.proto";

package registry;

service EntityRegistry {
    rpc RegisterEntity (RegisterRequest) returns (RegisterResponse) {}
    rpc DeregisterEntity (DeregisterRequest) returns (DeregisterResponse) {}
    rpc GetEntity (EntityRequest) returns (EntityResponse) {}
    rpc GetEntities (EntitiesRequest) returns (EntitiesResponse) {}
    rpc WatchEntities (WatchEntityRequest) returns (stream WatchEntityResponse) {}
    rpc RegisterNode (RegisterNodeRequest) returns (RegisterNodeResponse) {}
    rpc GetNode (NodeRequest) returns (NodeResponse) {}
    rpc GetNodes (NodesRequest) returns (NodesResponse) {}
    rpc GetNodesForEntity (EntityNodesRequest) returns (EntityNodesResponse) {}
    rpc WatchNodes (WatchNodeRequest) returns (stream WatchNodeResponse) {}
}

message RegisterRequest {
    common.Entity entity = 1;
    common.Signature signature = 2;
}

message RegisterResponse {
}

message DeregisterRequest {
    bytes id = 1;
    common.Signature signature = 2;
}

message DeregisterResponse {
}

message EntityRequest {
    bytes id = 1;
}

message EntityResponse {
    common.Entity entity = 1;
}

message EntitiesRequest {
}

message EntitiesResponse {
    repeated common.Entity entity = 1;
}

message WatchEntityRequest {
}

message WatchEntityResponse {
    enum ChangeType {
      REGISTERED = 0;
      DEREGISTERED = 1;
    }
    ChangeType event_type = 1;
    common.Entity entity = 2;
}

message RegisterNodeRequest {
    common.Node node = 1;
    common.Signature signature = 2;
}

message RegisterNodeResponse {
}

message NodeRequest {
    bytes id = 1;
}

message NodeResponse {
    common.Node node = 1;
}

message NodesRequest {
}

message NodesResponse {
    repeated common.Node node = 1;
}

message EntityNodesRequest {
    bytes id = 1;
}

message EntityNodesResponse {
    repeated common.Node node = 1;
}

message WatchNodeRequest {
}

message WatchNodeResponse {
    enum ChangeType {
      REGISTERED = 0;
      DEREGISTERED = 1;
    }
    ChangeType event_type = 1;
    common.Node node = 2;
}
